# python_ma

./: README.md  eigen_master.cpp  rodriguez_rotation.ipynb  rotation.cpp  rotation.h
telemanipulation_haptic_controller-master/h_c_utility/: CMakeLists.txt  h_c_utility.xml  package.xml
telemanipulation_haptic_controller-master/h_c_utility/include/: basic_haptic_controller.h  bounding_geometry.h  haptic_controller_datatypes.h  haptic_utils.h  haptic_wrapper.h  ros_helpers.h  spring_models.h  target_tracker.h
telemanipulation_haptic_controller-master/h_c_utility/src/: basic_haptic_controller.cpp  bounding_geometry.cpp  haptic_controller_datatypes.cpp  haptic_controller_node.cpp  haptic_utils.cpp  haptic_wrapper.cpp  pid_spring.cpp  ros_helpers.cpp  spring_models.cpp  target_tracker.cpp
